--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./app/components/*"]
     }
-  }
+  },
+  "include": ["./**/*.js", "./**/*.jsx"],
+  "exclude": ["node_modules", "**/*.ts"]
 }
