--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
     "lottie-web": "^5.12.2",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-lottie-player": "^2.0.0"
+    "react-lottie-player": "^2.0.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
