refactor: Update jsconfig.json to include all JavaScript and JSX files, excluding TypeScript files

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,6 @@
       "@/*": ["./app/components/*"]
     }
   },
-  "include": ["./**/*.js", "./**/*.jsx", "utils/tracing-beam.jsx"]
-  // "exclude": ["node_modules", "**/*.ts"]
+  "include": ["./**/*.js", "./**/*.jsx"],
+  "exclude": ["node_modules", "**/*.ts"]
 }
