--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@heroicons/react": "^1.0.6",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "lottie-web": "^5.12.2",
