--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "lottie-web": "^5.12.2",
