--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.2.10",
     "lottie-web": "^5.12.2",
     "next": "^14.2.4",
